tests/error/forcing/rec.mml
let rec s x : bool = s x + 3 in s 3
